Some login form examples and removing input1

--- a/html-themes/test.html
+++ b/html-themes/test.html
@@ -34,10 +34,6 @@
       <h1>Inputs</h1>
       <showcase>
         <element>
-          <label for="input1" class="input1">Input 1 </label>
-          <input id="input1" type="input" class="input1" placeholder="input1" required="">
-        </element>
-        <element>
           <label for="input2" class="input2">Input 2 </label>
           <input id="input2" type="input" class="input2" placeholder="input2" required="">
           <label for="input3" class="input2">Input 2 Disabled</label>
@@ -59,40 +55,82 @@
       <h1>Floating Label Inputs</h1>
       <showcase>
         <element>
-          <border class="float-input1">
-          <label for="float-input1" class="float-input1">Floating Label Input 1 asdfasdfaf</label>
-          <input id="float-input1" type="input" class="float-input1" placeholder="float-input1" required="">
-          </border>
-        </element>
-        <element>
           <border class="float-input2">
-          <label for="float-input2" class="float-input2">Floating Label Input 1 asdfasdfaf</label>
+          <label for="float-input2" class="float-input2">Floating Label Input 2 asdfasdfaf</label>
           <input id="float-input2" type="input" class="float-input2" placeholder="float-input2" required="">
           </border>
         </element>
         <element>
           <border class="float-input3">
-          <label for="float-input3" class="float-input3">Floating Label Input 1 asdfasdfaf</label>
+          <label for="float-input3" class="float-input3">Floating Label Input 3 asdfasdfaf</label>
           <input id="float-input3" type="input" class="float-input3" placeholder="float-input3" required="">
           </border>
         </element>
         <element>
           <border class="float-input4">
-          <label for="float-input4" class="float-input4">Floating Label Input 1 asdfasdfaf</label>
+          <label for="float-input4" class="float-input4">Floating Label Input 4 asdfasdfaf</label>
           <input id="float-input4" type="input" class="float-input4" placeholder="float-input4" required="">
           </border>
         </element>
         <element>
           <border class="float-input5">
-          <label for="float-input5" class="float-input5">Floating Label Input 1 asdfasdfaf</label>
+          <label for="float-input5" class="float-input5">Floating Label Input 5 asdfasdfaf</label>
           <input id="float-input5" type="input" class="float-input5" placeholder="float-input5" required="">
           </border>
         </element>
         <element>
           <border class="float-input6">
-          <label for="float-input6" class="float-input6">Floating Label Input 1 asdfasdfaf</label>
+          <label for="float-input6" class="float-input6">Floating Label Input 6 asdfasdfaf</label>
           <input id="float-input6" type="input" class="float-input6" placeholder="float-input6" required="">
           </border>
+        </element>
+      </showcase>
+      <h1>Login form</h1>
+      <showcase>
+        <element>
+          <form class="login-form">
+            <div class="form-line">
+              <label for="email" class="input2">Email</label>
+              <input id="email" type="input" class="input2" placeholder="john@gmail.com" required="">
+            </div>
+            <div class="form-line">
+              <label for="password" class="input2">Password</label>
+              <input id="password" type="password" class="input2" placeholder="password" required="">
+            </div>
+            <div class="form-line">
+              <button class="b2" type="submit">Login</button>
+            </div>
+          </form>
+        </element>
+        <element>
+          <form class="login-form">
+            <div class="form-line">
+              <label for="email" class="input3">Email</label>
+              <input id="email" type="input" class="input3" placeholder="john@gmail.com" required="">
+            </div>
+            <div class="form-line">
+              <label for="password" class="input3">Password</label>
+              <input id="password" type="password" class="input3" placeholder="password" required="">
+            </div>
+            <div class="form-line">
+              <button class="b3" type="submit">Login</button>
+            </div>
+          </form>
+        </element>
+        <element>
+          <form class="login-form">
+            <div class="form-line">
+              <label for="email" class="input4">Email</label>
+              <input id="email" type="input" class="input4" placeholder="john@gmail.com" required="">
+            </div>
+            <div class="form-line">
+              <label for="password" class="input4">Password</label>
+              <input id="password" type="password" class="input4" placeholder="password" required="">
+            </div>
+            <div class="form-line">
+              <button class="b4" type="submit">Login</button>
+            </div>
+          </form>
         </element>
       </showcase>
     </show>
