Small upgrade to login forms; will be still changing

--- a/html-themes/test.html
+++ b/html-themes/test.html
@@ -89,6 +89,7 @@
       <showcase>
         <element>
           <form class="login-form">
+            <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="input2">Email</label>
               <input id="email" type="input" class="input2" placeholder="john@gmail.com" required="">
@@ -104,6 +105,7 @@
         </element>
         <element>
           <form class="login-form">
+            <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="input3">Email</label>
               <input id="email" type="input" class="input3" placeholder="john@gmail.com" required="">
@@ -119,6 +121,7 @@
         </element>
         <element>
           <form class="login-form">
+            <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="input4">Email</label>
               <input id="email" type="input" class="input4" placeholder="john@gmail.com" required="">
