--- a/html-themes/test.html
+++ b/html-themes/test.html
@@ -88,7 +88,7 @@
       <h1>Login form</h1>
       <showcase>
         <element>
-          <form class="login-form">
+          <form class="login-form1">
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="input2">Email</label>
@@ -104,7 +104,23 @@
           </form>
         </element>
         <element>
-          <form class="login-form">
+          <form class="login-form2">
+            <div class="login-title">Welcome</div>
+            <div class="form-line">
+              <label for="email" class="input2">Email</label>
+              <input id="email" type="input" class="input2" placeholder="john@gmail.com" required="">
+            </div>
+            <div class="form-line">
+              <label for="password" class="input2">Password</label>
+              <input id="password" type="password" class="input2" placeholder="password" required="">
+            </div>
+            <div class="form-line">
+              <button class="b2" type="submit">Login</button>
+            </div>
+          </form>
+        </element>
+        <element>
+          <form class="login-form3">
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="input3">Email</label>
@@ -120,7 +136,7 @@
           </form>
         </element>
         <element>
-          <form class="login-form">
+          <form class="login-form4">
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="input4">Email</label>
