--- a/html-themes/test.html
+++ b/html-themes/test.html
@@ -15,49 +15,49 @@
       <h1>buttons</h1>
       <showcase>
         <element>
-          <button class="b1" type="button">Button 1</button> 
-          <button class="b1" type="button" disabled>Button 1</button>
+          <button class="b1 border-1 border-1-hover border-1-disabled" type="button">Button 1</button> 
+          <button class="b1 border-1 border-1-hover border-1-disabled" type="button" disabled>Button 1</button>
         </element>
         <element>
-          <button class="b2" type="button">Button 2</button>
-          <button class="b2" type="button" disabled>Button 2</button>
+          <button class="b2 border-2 border-2-hover border-2-disabled" type="button">Button 2</button>
+          <button class="b2 border-2 border-2-hover border-2-disabled" type="button" disabled>Button 2</button>
         </element>
         <element>
-          <button class="b3" type="button">Button 3</button>
-          <button class="b3" type="button" disabled>Button 3</button>
+          <button class="b3 border-3 border-3-hover border-3-disabled" type="button">Button 3</button>
+          <button class="b3 border-3 border-3-hover border-3-disabled" type="button" disabled>Button 3</button>
         </element>
         <element>
-          <button class="b4" type="button">Button 4</button>
-          <button class="b4" type="button" disabled>Button 4</button>
+          <button class="b4 border-4 border-4-hover border-4-disabled" type="button">Button 4</button>
+          <button class="b4 border-4 border-4-hover border-4-disabled" type="button" disabled>Button 4</button>
         </element>
       </showcase>
       <h1>Inputs</h1>
       <showcase>
         <element>
           <label for="input2" class="input2">Input 2 </label>
-          <input id="input2" type="input" class="input2" placeholder="input2" required="">
+<input id="input2" type="input" class="input2 border-2 border-2-focus border-2-disabled" placeholder="input2" required="">
           <label for="input3" class="input2">Input 2 Disabled</label>
-          <input id="input3" type="input" class="input2" placeholder="input2" required="" disabled>
+<input id="input3" type="input" class="input2 border-2 border-2-focus border-2-disabled" placeholder="input2" required="" disabled>
         </element>
         <element>
           <label for="input4" class="input3">Input 3 </label>
-          <input id="input4" type="input" class="input3" placeholder="input3" required="">
+<input id="input4" type="input" class="input3 border-3 border-3-focus border-3-disabled" placeholder="input3" required="">
           <label for="input5" class="input3">Input 3 Disabled</label>
-          <input id="input5" type="input" class="input3" placeholder="input3" required="" disabled>
+<input id="input5" type="input" class="input3 border-3 border-3-focus border-3-disabled" placeholder="input3" required="" disabled>
         </element>
         <element>
           <label for="input6" class="input4">Input 4 </label>
-          <input id="input6" type="input" class="input4" placeholder="input4" required="">
+<input id="input6" type="input" class="input4 border-4 border-4-focus border-4-disabled" placeholder="input4" required="">
           <label for="input7" class="input4">Input 4 Disabled</label>
-          <input id="input7" type="input" class="input4" placeholder="input4" required="" disabled>
+<input id="input7" type="input" class="input4 border-4 border-4-focus border-4-disabled" placeholder="input4" required="" disabled>
         </element>
       </showcase>
       <h1>Floating Label Inputs</h1>
       <showcase>
         <element>
-          <border class="float-input2">
+          <border class="float-input2 border-2">
           <label for="float-input2" class="float-input2">Floating Label Input 2 asdfasdfaf</label>
-          <input id="float-input2" type="input" class="float-input2" placeholder="float-input2" required="">
+<input id="float-input2" type="input" class="float-input2" placeholder="float-input2" required="">
           </border>
         </element>
         <element>
@@ -92,11 +92,11 @@
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="input2">Email</label>
-              <input id="email" type="input" class="input2" placeholder="john@gmail.com" required="">
+              <input id="email" type="input" class="input2 border-2 border-2-focus" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
               <label for="password" class="input2">Password</label>
-              <input id="password" type="password" class="input2" placeholder="password" required="">
+              <input id="password" type="password" class="input2 border-2 border-2-focus" placeholder="password" required="">
             </div>
             <div class="form-line">
               <button class="b2" type="submit">Login</button>
@@ -104,50 +104,50 @@
           </form>
         </element>
         <element>
-          <form class="login-form2">
+          <form class="border-2">
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="input2">Email</label>
-              <input id="email" type="input" class="input2" placeholder="john@gmail.com" required="">
+              <input id="email" type="input" class="input2 border-2 border-2-focus" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
               <label for="password" class="input2">Password</label>
-              <input id="password" type="password" class="input2" placeholder="password" required="">
+              <input id="password" type="password" class="input2 border-2 border-2-focus" placeholder="password" required="">
             </div>
             <div class="form-line">
-              <button class="b2" type="submit">Login</button>
+              <button class="b2 border-2 border-2-hover border-2-disabled" type="submit">Login</button>
             </div>
           </form>
         </element>
         <element>
-          <form class="login-form3">
+          <form class="border-3">
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="input3">Email</label>
-              <input id="email" type="input" class="input3" placeholder="john@gmail.com" required="">
+              <input id="email" type="input" class="input3 border-3 border-3-focus" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
               <label for="password" class="input3">Password</label>
-              <input id="password" type="password" class="input3" placeholder="password" required="">
+              <input id="password" type="password" class="input3 border-3 border-3-focus" placeholder="password" required="">
             </div>
             <div class="form-line">
-              <button class="b3" type="submit">Login</button>
+              <button class="b3 border-3 border-3-hover border-3-disabled" type="submit">Login</button>
             </div>
           </form>
         </element>
         <element>
-          <form class="login-form4">
+          <form class="border-4">
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="input4">Email</label>
-              <input id="email" type="input" class="input4" placeholder="john@gmail.com" required="">
+              <input id="email" type="input" class="input4 border-4 border-4-focus" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
               <label for="password" class="input4">Password</label>
-              <input id="password" type="password" class="input4" placeholder="password" required="">
+              <input id="password" type="password" class="input4 border-4 border-4-focus" placeholder="password" required="">
             </div>
             <div class="form-line">
-              <button class="b4" type="submit">Login</button>
+              <button class="b4 border-4 border-4-hover border-4-disabled" type="submit">Login</button>
             </div>
           </form>
         </element>
