This makes it a bit better I guess

--- a/html-themes/test.html
+++ b/html-themes/test.html
@@ -15,8 +15,8 @@
       <h1>buttons</h1>
       <showcase>
         <element>
-          <button class="b1 border-1 border-1-hover border-1-disabled" type="button">Button 1</button> 
-          <button class="b1 border-1 border-1-hover border-1-disabled" type="button" disabled>Button 1</button>
+          <button class="b1 border-1 border-1-hover border-1-disabled text-l" type="button">Button 1</button> 
+          <button class="b1 border-1 border-1-hover border-1-disabled text-l" type="button" disabled>Button 1</button>
         </element>
         <element>
           <button class="b2 border-2 border-2-hover border-2-disabled" type="button">Button 2</button>
@@ -99,7 +99,7 @@
               <input id="password" type="password" class="input2 border-2 border-2-focus" placeholder="password" required="">
             </div>
             <div class="form-line">
-              <button class="b2" type="submit">Login</button>
+              <button class="b2 border-2 border-2-hover border-2-disabled" type="submit">Login</button>
             </div>
           </form>
         </element>
