Make buttons use more utility CSS approach

--- a/html-themes/test.html
+++ b/html-themes/test.html
@@ -15,41 +15,41 @@
       <h1>buttons</h1>
       <showcase>
         <element>
-          <button class="b1 border-1 border-1-hover border-1-disabled text-l" type="button">Button 1</button> 
-          <button class="b1 border-1 border-1-hover border-1-disabled text-l" type="button" disabled>Button 1</button>
+          <button class="border-1 border-1-hover border-1-disabled text-1-1 padding-lr-1 color-secondary color-primary-hover bg-primary" type="button">Button 1</button> 
+          <button class="border-1 border-1-hover border-1-disabled text-1-1 padding-lr-1 color-inverted-primary" type="button" disabled>Button 1</button>
         </element>
         <element>
-          <button class="b2 border-2 border-2-hover border-2-disabled" type="button">Button 2</button>
-          <button class="b2 border-2 border-2-hover border-2-disabled" type="button" disabled>Button 2</button>
+          <button class="border-2 border-2-hover border-2-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover b2-text-shadow" type="button">Button 2</button>
+          <button class="border-2 border-2-hover border-2-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" type="button" disabled>Button 2</button>
         </element>
         <element>
-          <button class="b3 border-3 border-3-hover border-3-disabled" type="button">Button 3</button>
-          <button class="b3 border-3 border-3-hover border-3-disabled" type="button" disabled>Button 3</button>
+          <button class="border-3 border-3-hover border-3-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Button 3</button>
+          <button class="border-3 border-3-hover border-3-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" type="button" disabled>Button 3</button>
         </element>
         <element>
-          <button class="b4 border-4 border-4-hover border-4-disabled" type="button">Button 4</button>
-          <button class="b4 border-4 border-4-hover border-4-disabled" type="button" disabled>Button 4</button>
+          <button class="b4 border-4 border-4-hover border-4-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Button 4</button>
+          <button class="border-4 border-4-hover border-4-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" type="button" disabled>Button 4</button>
         </element>
       </showcase>
       <h1>Inputs</h1>
       <showcase>
         <element>
           <label for="input2" class="input2">Input 2 </label>
-          <input id="input2" type="input" class="input2 border-2 border-2-focus border-2-disabled" placeholder="input2" required="">
+          <input id="input2" type="input" class="input2 border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1" placeholder="input2" required="">
           <label for="input3" class="input2">Input 2 Disabled</label>
-          <input id="input3" type="input" class="input2 border-2 border-2-focus border-2-disabled" placeholder="input2" required="" disabled>
+          <input id="input3" type="input" class="input2 border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1" placeholder="input2" required="" disabled>
         </element>
         <element>
           <label for="input4" class="input3">Input 3 </label>
-          <input id="input4" type="input" class="input3 border-3 border-3-focus border-3-disabled" placeholder="input3" required="">
+          <input id="input4" type="input" class="input3 border-3 border-3-focus border-3-disabled text-1-1 padding-lr-1" placeholder="input3" required="">
           <label for="input5" class="input3">Input 3 Disabled</label>
-          <input id="input5" type="input" class="input3 border-3 border-3-focus border-3-disabled" placeholder="input3" required="" disabled>
+          <input id="input5" type="input" class="input3 border-3 border-3-focus border-3-disabled text-1-1 padding-lr-1" placeholder="input3" required="" disabled>
         </element>
         <element>
           <label for="input6" class="input4">Input 4 </label>
-          <input id="input6" type="input" class="input4 border-4 border-4-focus border-4-disabled" placeholder="input4" required="">
+          <input id="input6" type="input" class="input4 border-4 border-4-focus border-4-disabled text-1-1 padding-lr-1" placeholder="input4" required="">
           <label for="input7" class="input4">Input 4 Disabled</label>
-          <input id="input7" type="input" class="input4 border-4 border-4-focus border-4-disabled" placeholder="input4" required="" disabled>
+          <input id="input7" type="input" class="input4 border-4 border-4-focus border-4-disabled text-1-1 padding-lr-1" placeholder="input4" required="" disabled>
         </element>
       </showcase>
       <h1>Floating Label Inputs</h1>
@@ -92,14 +92,14 @@
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="input2">Email</label>
-              <input id="email" type="input" class="input2 border-2 border-2-focus" placeholder="john@gmail.com" required="">
+              <input id="email" type="input" class="input2 border-2 border-2-focus text-1-1 padding-lr-1 padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
               <label for="password" class="input2">Password</label>
-              <input id="password" type="password" class="input2 border-2 border-2-focus" placeholder="password" required="">
+              <input id="password" type="password" class="input2 border-2 border-2-focus text-1-1 padding-lr-1 padding-tb-0-4 width-100" placeholder="password" required="">
             </div>
             <div class="form-line">
-              <button class="b2 border-2 border-2-hover border-2-disabled" type="submit">Login</button>
+              <button class="border-2 border-2-hover border-2-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover b2-text-shadow" type="button">Login</button>
             </div>
           </form>
         </element>
@@ -108,14 +108,14 @@
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="input2">Email</label>
-              <input id="email" type="input" class="input2 border-2 border-2-focus" placeholder="john@gmail.com" required="">
+              <input id="email" type="input" class="input2 border-2 border-2-focus text-1-1 padding-lr-1 padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
               <label for="password" class="input2">Password</label>
-              <input id="password" type="password" class="input2 border-2 border-2-focus" placeholder="password" required="">
+              <input id="password" type="password" class="input2 border-2 border-2-focus text-1-1 padding-lr-1 padding-tb-0-4 width-100" placeholder="password" required="">
             </div>
             <div class="form-line">
-              <button class="b2 border-2 border-2-hover border-2-disabled" type="submit">Login</button>
+              <button class="border-2 border-2-hover border-2-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover b2-text-shadow" type="button">Login</button>
             </div>
           </form>
         </element>
@@ -124,14 +124,14 @@
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="input3">Email</label>
-              <input id="email" type="input" class="input3 border-3 border-3-focus" placeholder="john@gmail.com" required="">
+              <input id="email" type="input" class="input3 border-3 border-3-focus text-1-1 padding-lr-1 padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
               <label for="password" class="input3">Password</label>
-              <input id="password" type="password" class="input3 border-3 border-3-focus" placeholder="password" required="">
+              <input id="password" type="password" class="input3 border-3 border-3-focus text-1-1 padding-lr-1 padding-tb-0-4 width-100" placeholder="password" required="">
             </div>
             <div class="form-line">
-              <button class="b3 border-3 border-3-hover border-3-disabled" type="submit">Login</button>
+              <button class="border-3 border-3-hover border-3-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Login</button>
             </div>
           </form>
         </element>
@@ -140,14 +140,14 @@
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="input4">Email</label>
-              <input id="email" type="input" class="input4 border-4 border-4-focus" placeholder="john@gmail.com" required="">
+              <input id="email" type="input" class="input4 border-4 border-4-focus text-1-1 padding-lr-1 padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
               <label for="password" class="input4">Password</label>
-              <input id="password" type="password" class="input4 border-4 border-4-focus" placeholder="password" required="">
+              <input id="password" type="password" class="input4 border-4 border-4-focus text-1-1 padding-lr-1 padding-tb-0-4 width-100" placeholder="password" required="">
             </div>
             <div class="form-line">
-              <button class="b4 border-4 border-4-hover border-4-disabled" type="submit">Login</button>
+              <button class="b4 border-4 border-4-hover border-4-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Login</button>
             </div>
           </form>
         </element>
