Inputs now use utility CSS as well

--- a/html-themes/test.html
+++ b/html-themes/test.html
@@ -34,54 +34,54 @@
       <h1>Inputs</h1>
       <showcase>
         <element>
-          <label for="input2" class="input2">Input 2 </label>
-          <input id="input2" type="input" class="input2 border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1" placeholder="input2" required="">
-          <label for="input3" class="input2">Input 2 Disabled</label>
-          <input id="input3" type="input" class="input2 border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1" placeholder="input2" required="" disabled>
+          <label for="input2" class="color-primary">Input 2 </label>
+          <input id="input2" type="input" class="border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1 bg-primary color-primary" placeholder="input2" required="">
+          <label for="input3" class="color-primary">Input 2 Disabled</label>
+          <input id="input3" type="input" class="border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" placeholder="input2" required="" disabled>
         </element>
         <element>
-          <label for="input4" class="input3">Input 3 </label>
-          <input id="input4" type="input" class="input3 border-3 border-3-focus border-3-disabled text-1-1 padding-lr-1" placeholder="input3" required="">
-          <label for="input5" class="input3">Input 3 Disabled</label>
-          <input id="input5" type="input" class="input3 border-3 border-3-focus border-3-disabled text-1-1 padding-lr-1" placeholder="input3" required="" disabled>
+          <label for="input4" class="color-primary">Input 3 </label>
+          <input id="input4" type="input" class="border-3 border-3-focus border-3-disabled text-1-1 padding-lr-1 bg-primary color-primary" placeholder="input3" required="">
+          <label for="input5" class="color-primary">Input 3 Disabled</label>
+          <input id="input5" type="input" class="input3 border-3 border-3-focus border-3-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" placeholder="input3" required="" disabled>
         </element>
         <element>
-          <label for="input6" class="input4">Input 4 </label>
-          <input id="input6" type="input" class="input4 border-4 border-4-focus border-4-disabled text-1-1 padding-lr-1" placeholder="input4" required="">
-          <label for="input7" class="input4">Input 4 Disabled</label>
-          <input id="input7" type="input" class="input4 border-4 border-4-focus border-4-disabled text-1-1 padding-lr-1" placeholder="input4" required="" disabled>
+          <label for="input6" class="color-primary">Input 4 </label>
+          <input id="input6" type="input" class="border-4 border-4-focus border-4-disabled text-1-1 padding-lr-1 bg-primary color-primary" placeholder="input4" required="">
+          <label for="input7" class="color-primary">Input 4 Disabled</label>
+          <input id="input7" type="input" class="border-4 border-4-focus border-4-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" placeholder="input4" required="" disabled>
         </element>
       </showcase>
       <h1>Floating Label Inputs</h1>
       <showcase>
         <element>
           <border class="float-input2 border-2">
-          <label for="float-input2" class="float-input2">Floating Label Input 2 asdfasdfaf</label>
-          <input id="float-input2" type="input" class="float-input2" placeholder="float-input2" required="">
+            <label for="float-input2" class="float-input2">Floating Label Input 2 asdfasdfaf</label>
+            <input id="float-input2" type="input" class="float-input2" placeholder="float-input2" required="">
           </border>
         </element>
         <element>
           <border class="float-input3">
-          <label for="float-input3" class="float-input3">Floating Label Input 3 asdfasdfaf</label>
-          <input id="float-input3" type="input" class="float-input3" placeholder="float-input3" required="">
+            <label for="float-input3" class="float-input3">Floating Label Input 3 asdfasdfaf</label>
+            <input id="float-input3" type="input" class="float-input3" placeholder="float-input3" required="">
           </border>
         </element>
         <element>
           <border class="float-input4">
-          <label for="float-input4" class="float-input4">Floating Label Input 4 asdfasdfaf</label>
-          <input id="float-input4" type="input" class="float-input4" placeholder="float-input4" required="">
+            <label for="float-input4" class="float-input4">Floating Label Input 4 asdfasdfaf</label>
+            <input id="float-input4" type="input" class="float-input4" placeholder="float-input4" required="">
           </border>
         </element>
         <element>
           <border class="float-input5">
-          <label for="float-input5" class="float-input5">Floating Label Input 5 asdfasdfaf</label>
-          <input id="float-input5" type="input" class="float-input5" placeholder="float-input5" required="">
+            <label for="float-input5" class="float-input5">Floating Label Input 5 asdfasdfaf</label>
+            <input id="float-input5" type="input" class="float-input5" placeholder="float-input5" required="">
           </border>
         </element>
         <element>
           <border class="float-input6">
-          <label for="float-input6" class="float-input6">Floating Label Input 6 asdfasdfaf</label>
-          <input id="float-input6" type="input" class="float-input6" placeholder="float-input6" required="">
+            <label for="float-input6" class="float-input6">Floating Label Input 6 asdfasdfaf</label>
+            <input id="float-input6" type="input" class="float-input6" placeholder="float-input6" required="">
           </border>
         </element>
       </showcase>
@@ -91,12 +91,12 @@
           <form class="login-form1">
             <div class="login-title">Welcome</div>
             <div class="form-line">
-              <label for="email" class="input2">Email</label>
-              <input id="email" type="input" class="input2 border-2 border-2-focus text-1-1 padding-lr-1 padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
+              <label for="email" class="color-primary">Email</label>
+              <input id="email" type="input" class="border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1 bg-primary color-primary  padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
-              <label for="password" class="input2">Password</label>
-              <input id="password" type="password" class="input2 border-2 border-2-focus text-1-1 padding-lr-1 padding-tb-0-4 width-100" placeholder="password" required="">
+              <label for="password" class="color-primary">Password</label>
+              <input id="password" type="password" class="border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="password" required="">
             </div>
             <div class="form-line">
               <button class="border-2 border-2-hover border-2-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover b2-text-shadow" type="button">Login</button>
@@ -107,12 +107,12 @@
           <form class="border-2">
             <div class="login-title">Welcome</div>
             <div class="form-line">
-              <label for="email" class="input2">Email</label>
-              <input id="email" type="input" class="input2 border-2 border-2-focus text-1-1 padding-lr-1 padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
+              <label for="email" class="color-primary">Email</label>
+              <input id="email" type="input" class="border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1 bg-primary color-primary  padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
-              <label for="password" class="input2">Password</label>
-              <input id="password" type="password" class="input2 border-2 border-2-focus text-1-1 padding-lr-1 padding-tb-0-4 width-100" placeholder="password" required="">
+              <label for="password" class="color-primary">Password</label>
+              <input id="password" type="password" class="border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="password" required="">
             </div>
             <div class="form-line">
               <button class="border-2 border-2-hover border-2-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover b2-text-shadow" type="button">Login</button>
@@ -123,12 +123,12 @@
           <form class="border-3">
             <div class="login-title">Welcome</div>
             <div class="form-line">
-              <label for="email" class="input3">Email</label>
-              <input id="email" type="input" class="input3 border-3 border-3-focus text-1-1 padding-lr-1 padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
+              <label for="email" class="color-primary">Email</label>
+              <input id="email" type="input" class="border-3 border-3-focus border-3-disabled text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
-              <label for="password" class="input3">Password</label>
-              <input id="password" type="password" class="input3 border-3 border-3-focus text-1-1 padding-lr-1 padding-tb-0-4 width-100" placeholder="password" required="">
+              <label for="password" class="color-primary">Password</label>
+              <input id="password" type="password" class="border-3 border-3-focus border-3-disabled text-1-1 padding-lr-1 bg-primary color-primary  padding-tb-0-4 width-100" placeholder="password" required="">
             </div>
             <div class="form-line">
               <button class="border-3 border-3-hover border-3-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Login</button>
@@ -140,11 +140,11 @@
             <div class="login-title">Welcome</div>
             <div class="form-line">
               <label for="email" class="input4">Email</label>
-              <input id="email" type="input" class="input4 border-4 border-4-focus text-1-1 padding-lr-1 padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
+              <input id="email" type="input" class="border-4 border-4-focus border-4-disabled text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="john@gmail.com" required="">
             </div>
             <div class="form-line">
               <label for="password" class="input4">Password</label>
-              <input id="password" type="password" class="input4 border-4 border-4-focus text-1-1 padding-lr-1 padding-tb-0-4 width-100" placeholder="password" required="">
+              <input id="password" type="password" class="border-4 border-4-focus border-4-disabled text-1-1 padding-lr-1 bg-primary color-primary padding-tb-0-4 width-100" placeholder="password" required="">
             </div>
             <div class="form-line">
               <button class="b4 border-4 border-4-hover border-4-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Login</button>
