Add chackbox styles
Styling checkboxes in CSS sucks... so much.

--- a/html-themes/test.html
+++ b/html-themes/test.html
@@ -15,41 +15,41 @@
       <h1>buttons</h1>
       <showcase>
         <element>
-          <button class="border-1 border-1-hover border-1-disabled text-1-1 padding-lr-1 color-secondary color-primary-hover bg-primary" type="button">Button 1</button> 
-          <button class="border-1 border-1-hover border-1-disabled text-1-1 padding-lr-1 color-inverted-primary" type="button" disabled>Button 1</button>
+          <button class="border-1 border-1-hover text-1-1 padding-lr-1 color-secondary color-primary-hover bg-primary" type="button">Button 1</button> 
+          <button class="border-1-disabled text-1-1 padding-lr-1 color-inverted-primary" type="button" disabled>Button 1</button>
         </element>
         <element>
-          <button class="border-2 border-2-hover border-2-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover b2-text-shadow" type="button">Button 2</button>
-          <button class="border-2 border-2-hover border-2-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" type="button" disabled>Button 2</button>
+          <button class="border-2 border-2-hover text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover b2-text-shadow" type="button">Button 2</button>
+          <button class="border-2-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" type="button" disabled>Button 2</button>
         </element>
         <element>
-          <button class="border-3 border-3-hover border-3-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Button 3</button>
-          <button class="border-3 border-3-hover border-3-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" type="button" disabled>Button 3</button>
+          <button class="border-3 border-3-hover text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Button 3</button>
+          <button class="border-3-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" type="button" disabled>Button 3</button>
         </element>
         <element>
-          <button class="b4 border-4 border-4-hover border-4-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Button 4</button>
-          <button class="border-4 border-4-hover border-4-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" type="button" disabled>Button 4</button>
+          <button class="border-4 border-4-hover text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Button 4</button>
+          <button class="border-4-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" type="button" disabled>Button 4</button>
         </element>
       </showcase>
       <h1>Inputs</h1>
       <showcase>
         <element>
           <label for="input2" class="color-primary">Input 2 </label>
-          <input id="input2" type="input" class="border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1 bg-primary color-primary" placeholder="input2" required="">
+          <input id="input2" type="input" class="border-2 border-2-focus text-1-1 padding-lr-1 bg-primary color-primary" placeholder="input2" required="">
           <label for="input3" class="color-primary">Input 2 Disabled</label>
-          <input id="input3" type="input" class="border-2 border-2-focus border-2-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" placeholder="input2" required="" disabled>
+          <input id="input3" type="input" class="border-2-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" placeholder="input2" required="" disabled>
         </element>
         <element>
           <label for="input4" class="color-primary">Input 3 </label>
-          <input id="input4" type="input" class="border-3 border-3-focus border-3-disabled text-1-1 padding-lr-1 bg-primary color-primary" placeholder="input3" required="">
+          <input id="input4" type="input" class="border-3 border-3-focus text-1-1 padding-lr-1 bg-primary color-primary" placeholder="input3" required="">
           <label for="input5" class="color-primary">Input 3 Disabled</label>
-          <input id="input5" type="input" class="input3 border-3 border-3-focus border-3-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" placeholder="input3" required="" disabled>
+          <input id="input5" type="input" class="input3 border-3-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" placeholder="input3" required="" disabled>
         </element>
         <element>
           <label for="input6" class="color-primary">Input 4 </label>
-          <input id="input6" type="input" class="border-4 border-4-focus border-4-disabled text-1-1 padding-lr-1 bg-primary color-primary" placeholder="input4" required="">
+          <input id="input6" type="input" class="border-4 border-4-focus text-1-1 padding-lr-1 bg-primary color-primary" placeholder="input4" required="">
           <label for="input7" class="color-primary">Input 4 Disabled</label>
-          <input id="input7" type="input" class="border-4 border-4-focus border-4-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" placeholder="input4" required="" disabled>
+          <input id="input7" type="input" class="border-4-disabled text-1-1 padding-lr-1 bg-primary color-disabled-primary" placeholder="input4" required="" disabled>
         </element>
       </showcase>
       <h1>Floating Label Inputs</h1>
@@ -150,6 +150,27 @@
               <button class="b4 border-4 border-4-hover border-4-disabled text-1-1 padding-lr-1 bg-primary color-secondary color-primary-hover" type="button">Login</button>
             </div>
           </form>
+        </element>
+      </showcase>
+      <h1>Check boxes</h1>
+      <showcase>
+        <element>
+          <input id="check-box2" type="checkbox" class="text-1-1 border-2 border-2-hover color-secondary color-primary-hover b2-text-shadow width-1-2 height-1-2 inline-block">
+          <label for="check-box2" class="color-primary">Checkbox 2</label>
+          <input id="check-box3" type="checkbox" class="text-1-1 border-2-disabled color-disabled-primary b2-text-shadow width-1-2 height-1-2" disabled>
+          <label for="check-box3" class="color-primary">Checkbox 2 Disabled</label>
+        </element>
+        <element>
+          <input id="check-box4" type="checkbox" class="text-1-1 border-3 border-3-hover color-secondary color-primary-hover width-1-2 height-1-2">
+          <label for="check-box4" class="color-primary">Checkbox 3</label>
+          <input id="check-box5" type="checkbox" class="text-1-1 border-3-disabled color-disabled-primary width-1-2 height-1-2" disabled>
+          <label for="check-box5" class="color-primary">Checkbox 3 Disabled</label>
+        </element>
+        <element>
+          <input id="check-box6" type="checkbox" class="text-1-1 border-4 border-4-hover color-secondary color-primary-hover width-1-2 height-1-2">
+          <label for="check-box6" class="color-primary">Checkbox 4</label>
+          <input id="check-box7" type="checkbox" class="text-1-1 border-4-disabled color-disabled-primary width-1-2 height-1-2" disabled>
+          <label for="check-box7" class="color-primary">Checkbox 4 Disabled</label>
         </element>
       </showcase>
     </show>
